# Nebra

./: LICENSE  README.md  docker-compose.yml  skills-lock.json
Agent/: .env.example  .gitignore  main.py  requirements.txt
Agent/src/: api_client.py  collector.py
Backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/: deps.py  router.py
Backend/app/api/v1/: router.py
Backend/app/api/v1/endpoints/: agent.py  assets.py  auth.py  health.py  settings.py
Backend/app/core/: config.py  database.py  security.py  websocket.py
Backend/app/models/: __init__.py  alert.py  asset.py  maintenance.py  setting.py  user.py
Backend/app/repositories/: assets.py  users.py
Backend/app/schemas/: asset.py  setting.py  user.py
Backend/app/services/: auth.py
NebraFront/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
NebraFront/src/: App.tsx  index.css  main.tsx
NebraFront/src/components/: ProtectedRoute.tsx
NebraFront/src/components/auth/: AuthForms.tsx
NebraFront/src/components/dashboard/: AssetDetails.tsx  AssetForm.tsx  AssetTable.tsx  DashboardFeed.tsx  MetricsPanel.tsx  Notifications.tsx  SettingsPanel.tsx  StatsOverview.tsx
NebraFront/src/components/ui/: button.tsx  (+1 more)
NebraFront/src/contexts/: AuthContext.tsx
NebraFront/src/lib/: api.ts  use-realtime.ts
NebraFront/src/pages/: DashboardPage.tsx  LoginPage.tsx
NebraLandingPage/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
NebraLandingPage/src/: App.tsx  index.css
(+1 files in other folders)
