[project]
name = "nebra-backend"
version = "0.1.0"
description = "Nebra backend API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5",
  "email-validator>=2.3.0",
  "fastapi>=0.121.1",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.12",
  "pydantic-settings>=2.11.0",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.44",
  "sqlalchemy-cockroachdb>=2.0.2",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
